--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/VG1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/symbol" />
+        android:src="@drawable/symbol"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lav_waves"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rotation="180"
+        android:scaleType="fitEnd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="waves.json"
+        app:lottie_loop="true"
+        app:lottie_repeatMode="reverse"
+        app:lottie_speed="2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,16 +42,16 @@
         android:text="AURA"
         android:textColor="@android:color/white"
         android:textSize="50sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_help"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.120000005" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/btn_help"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -66,11 +84,10 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="Enter your phone number"
-            android:textColor="#4ABDFF"
+            android:textColor="@color/colorAccent"
             android:textSize="22sp"
             app:layout_constraintBottom_toTopOf="@+id/el_phone_number"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.709" />
@@ -78,46 +95,45 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:fontFamily="@font/poppins"
             android:text="We will send you a OTP message"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/el_phone_number"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:layout_constraintVertical_bias="0.0" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/el_phone_number"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="52dp"
+            android:layout_marginStart="76dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="76dp"
             android:layout_marginBottom="8dp"
             android:hint="Phone Number"
-            android:textColorHint="#4ABDFF"
+            android:textColorHint="@color/colorAccent"
+            app:counterEnabled="true"
+            app:counterMaxLength="10"
+            app:counterOverflowTextAppearance="@style/CounterText"
+            app:counterTextAppearance="@style/CounterText"
             app:hintAnimationEnabled="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.675"
-            app:counterOverflowTextAppearance="@style/CounterText"
-            app:counterTextAppearance="@style/CounterText"
-            app:counterEnabled="true"
-            app:counterMaxLength="10">
+            app:layout_constraintVertical_bias="0.675">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_phone_number"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_phone"
                 android:drawablePadding="16dp"
-                android:drawableTint="#4ABDFF"
+                android:drawableTint="@color/colorAccent"
                 android:fontFamily="@font/lato"
                 android:inputType="number"
                 android:maxLength="10"
@@ -131,26 +147,28 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_login"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginEnd="100dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/bg_btn"
-            android:elevation="4dp"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
             android:text="SEND OTP"
             android:textColor="@android:color/white"
             android:textSize="18sp"
+            app:cornerRadius="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/el_phone_number"
-            app:layout_constraintVertical_bias="0.447" />
+            app:layout_constraintVertical_bias="0.447"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -170,7 +188,7 @@
             android:layout_marginBottom="8dp"
             android:cursorVisible="false"
             android:inputType="number"
-            android:textColor="#4ABDFF"
+            android:textColor="@color/colorAccent"
             android:textSize="50sp"
             app:itemCount="6"
             app:itemSpacing="8dp"
@@ -183,27 +201,29 @@
             app:lineColor="#000000"
             app:viewType="line" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_otp"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="100dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/bg_btn"
-            android:elevation="4dp"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
             android:text="VERIFY"
             android:textColor="@android:color/white"
             android:textSize="18sp"
+            app:cornerRadius="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cv_otp"
-            app:layout_constraintVertical_bias="0.7" />
+            app:layout_constraintVertical_bias="0.7"
+            app:strokeColor="@color/colorAccent"
+            app:strokeWidth="2dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
