--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#25272A</color>
-    <color name="colorAccent">#00b0ff</color>
+    <color name="colorAccent">#00B0FF</color>
 </resources>
