--- a/app/src/main/res/layout/bottom_sheet_add_disaster.xml
+++ b/app/src/main/res/layout/bottom_sheet_add_disaster.xml
@@ -43,7 +43,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_disaster_type"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,7 +65,9 @@
             android:id="@+id/et_intensity_level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:inputType="number"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,6 +80,7 @@
         android:layout_margin="32dp"
         android:padding="8dp"
         android:text="SUBMIT"
+        android:textColor="@color/textColor"
         app:strokeColor="@color/colorAccent"
         app:strokeWidth="2dp" />
 
