--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">@android:color/white</color>
     <color name="colorPrimaryDark">#25272A</color>
     <color name="colorAccent">#00B0FF</color>
-<<<<<<< HEAD
-=======
 
     <color name="textColor">@android:color/white</color>
->>>>>>> master
 </resources>
