--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/white</color>
+    <color name="colorPrimary">#00B0FF</color>
     <color name="colorPrimaryDark">#25272A</color>
     <color name="colorAccent">#00B0FF</color>
 
