--- a/app/src/main/res/layout/activity_disaster_maps.xml
+++ b/app/src/main/res/layout/activity_disaster_maps.xml
@@ -18,6 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="32dp"
+        android:backgroundTint="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add"/>
