--- a/app/src/main/res/layout/activity_disaster_maps.xml
+++ b/app/src/main/res/layout/activity_disaster_maps.xml
@@ -17,7 +17,8 @@
         android:id="@+id/fab_add_disaster"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
         android:backgroundTint="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
